# B_Ruge

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  rust.yml
.github/workflows/: deploy_web.yml  deploy_web_dev.yml  deploy_web_prod.yml
scripts/: build_web.sh  clean_web.sh  download_gdrive_file.sh  index_resources.sh  init_web_assembly.sh  unzip_util.sh
src/: components.rs  config.rs  data.rs  dialog.rs  dialog_factory.rs  entity_factory.rs  exceptions.rs  functions.rs  main.rs  map.rs  player.rs  rectangle.rs  rng.rs  scribbles.rs  spawn_controller.rs  state.rs  swatch.rs  systems.rs  tile_factory.rs  ui.rs  ui_controller.rs
src/audio/: controller.rs  mod.rs  structs.rs  traits.rs
src/r/: ambiance.rs  mod.rs  music.rs  sfx.rs
web/scripts/: build_web.sh  init_web_assembly.sh
web/templates/: index.html  loader.js  manifest.json  styles.css
