[package]
name = "b_ruge"
version = "0.2.2"
edition = "2018"
description = "Shadowrun inspired dungeon crawler written in Rust"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SebastianRiga"
keywords = [ "gamedev", "rust", "rougelike", "dungeon", "crawler" ]
categories = [ "games" ]
publish = false
repository = "https://github.com/SebastianRiga/Bionic_Rouge"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.1" }
specs = "0.17.0"
specs-derive = "0.4.1"